minor changes to the text

--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -11,12 +11,9 @@ knitr::opts_chunk$set(message = FALSE)
 
 To be able to effectively and efficiently write R code for your analysis you 
 will need access to the R programming language on a computer. This chapter will 
-show you how to use the R programming language with the a common coding 
-platforms in data science, Jupyter. In this chapter we will point 
-you to using this platform via a web-interface for ease of getting going 
-quickly. In a later chapter, we will also show you how to install and configure 
-this on your local computer (i.e., laptop). These skills are essential to 
-getting your analysis running, think of it like getting dressed in the morning!
+show you how to use the R programming language with a common coding 
+platform in data science, Jupyter. In this chapter, we will show you how to use this platform via a web-interface for ease of getting going 
+quickly. In a later chapter, we will also show you how to install and configure this on your local computer (i.e., laptop). These skills are essential to getting your analysis running; think of it like getting dressed in the morning!
 
 ## Chapter learning objectives
 
@@ -25,25 +22,13 @@ By the end of the chapter, students will be able to:
 - use Jupyter to run, edit and write R code
 - explore plain text data files in Jupyter
 - create new Jupyter notebooks
-- export Jupyter notebooks to other standard file types (e.g., `.html`, `.pdf`) for 
-sharing with non-data science audiences
+- export Jupyter notebooks to other standard file types (e.g., `.html`, `.pdf`) for sharing with non-data science audiences
 
 ## Jupyter
 
-Jupyter is a web-based interactive development environment for creating, editing 
-and executing documents called Jupyter notebooks. Jupyter notebooks are 
-documents that contain a mix of computer code (and its output) and formattable 
-text. Given that they combine these two analysis artefacts in a single document—code is 
-not separate from the output or written report—notebooks are one of the leading 
-tools to create reproducible data analyses. A reproducible data analysis is one 
-where you can reliably and easily recreate the same results when analyzing the 
-same data. Although this sounds like something that should always be true of any 
-data analysis, in reality this is not often the case; one needs to make a 
-conscious effort to perform data analysis in a reproducible manner.
+Jupyter is a web-based interactive development environment for creating, editing and executing documents called Jupyter notebooks. Jupyter notebooks are documents that contain a mix of computer code (and its output) and formattable text. Given that they combine these two analysis artifacts in a single document—code is not separate from the output or written report—notebooks are one of the leading tools to create reproducible data analyses. Reproducible data analysis is one where you can reliably and easily recreate the same results when analyzing the same data. Although this sounds like something that should always be true of any data analysis, in reality, this is not often the case; one needs to make a conscious effort to perform data analysis in a reproducible manner.
 
-The name Jupyter came from combining the names of the three programming language 
-that it was initially targeted for (Julia, Python, and R), and now many other 
-languages can be used with Jupyter notebooks.
+The name Jupyter came from combining the names of the three programming languages that it was initially targeted for (Julia, Python, and R), and now many other languages can be used with Jupyter notebooks.
 
 A Jupyter notebook looks like this:
 
@@ -53,16 +38,15 @@ knitr::include_graphics("img/jupyter.png")
 
 ### Accessing Jupyter
 
-One of the easiest way to get up and computing in R with Jupyter is to use a 
-web-based platform called JupyterHub that already has Jupyter, R, a number of R 
-packages, and collaboration tools installed, configured and ready to use. 
+One of the easiest ways to start computing in R with Jupyter is to use a 
+web-based platform called JupyterHub that already has Jupyter, R, a number of R packages, and collaboration tools installed, configured and ready to use. 
 JupyterHub's are usually created and provisioned by organizations (for example,
-an university, a company, *et cetera*) and require authentication to gain 
+a university, a company, *etcetera*) and require authentication to gain 
 access. <!--- Insert link to public JupyterHub here if we can get 
 access/permission (either 2i2c collaboration, or 
-https://notebooks.gesis.org/hub/home) --> Jupyter can also be intalled on your
-own computer (desktop or laptop) and we provide examples of how to do this in
-chapter \@ref(Moving-to-your-own-machine).
+https://notebooks.gesis.org/hub/home) --> Jupyter can also be installed on your
+own computer (desktop or laptop), and we provide examples of how to do this in
+chapter \@ref(move-to-your-own-machine).
 
 ## Code cells
 
@@ -85,10 +69,7 @@ image_read("img/code-cell-run.png") %>%
 
 ### Executing code cells
 
-Code cells can be run independently, or as part of executing the entire notebook
-using one of the "**Run all**" commands found in the **Run** or **Kernel** menus
-in Jupyter. Running a
-single code cell independently is a workflow typically used when editing or 
+Code cells can be run independently or as part of executing the entire notebook using one of the "**Run all**" commands found in the **Run** or **Kernel** menus in Jupyter. Running a single code cell independently is a workflow typically used when editing or 
 writing your own R code. Executing an entire notebook is a workflow typically 
 used to ensure that your analysis runs in its entirety before sharing it with
 others, and when using a notebook as part of an automated process.
@@ -105,7 +86,7 @@ image_read("img/activate-and-run-button-annotated.png") %>%
   image_crop("3632x900")
 ```
 
-To execute all of the code cells in an entire notebook you can either select 
+To execute all of the code cells in an entire notebook, you can either select 
 **Run** >> **Run All Cells**, or **Kernel** >> 
 **Restart Kernel and Run All Cells...** from the Jupyter menu. Additionally, 
 there is a **Restart the kernel, then re-run the whole notebook** button (▶▶) in 
@@ -126,7 +107,7 @@ image_read("img/restart-kernel-run-all.png") %>%
 > #### The Kernel
 > The kernel is a program that executes the code inside your notebook and outputs
 > the results. Kernels for many different programming languages have been 
-> created for Jupyter, and this means that Jupyter can interpret and execute the 
+> created for Jupyter, which means that Jupyter can interpret and execute the 
 > code of many different programming languages. To run R code, your notebook 
 > will need an R kernel. In the top right of your window, you can see a circle 
 > that indicates the status of your kernel. If the circle is empty (⚪), 
@@ -142,11 +123,8 @@ image_read("img/restart-kernel-run-all.png") %>%
 > - If that doesn't help, restart your server. First, save your work by clicking **File** at the top left of your screen, then **Save Notebook**. Next, from the **File** menu click **Hub Control Panel**. Choose **Stop My Server** to shut it down, then the **My Server** button to start it back up. Then, navigate back to the notebook you were working on.
 
 ### Creating new code cells
- 
-To create a new code cell in Jupyter, click the `+` button in the Jupyter 
-notebook tab menu. By default, all new cells in Jupyter start out as code cells,
-so all there is to do after this is writing R code within the new cell you just 
-created!
+
+To create a new code cell in Jupyter, click the `+` button in the Jupyter notebook tab menu. By default, all new cells in Jupyter start out as code cells, so after this, all you have to do is write R code within the new cell you just created!
 
 ```{r create-new-code-cell, echo = FALSE, fig.cap = "New cells can be created by clicking the + button, and are by default code cells.", fig.retina = 2, out.width="100%"}
 image_read("img/create-new-code-cell.png") %>% 
