changes to the writing

--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -166,9 +166,7 @@ image_read("img/markdown-cell-run.png") %>%
 ### Creating new Markdown cells
 
 To create a new Markdown cell in Jupyter, click the `+` button in the Jupyter 
-notebook tab menu. By default, all new cells in Jupyter start out as code cells,
-and so the cell format needs to be changed to have the cell be recognized and 
-rendered as a Markdown cell. To do this click on the cell with your cursor to 
+notebook tab menu. By default, all new cells in Jupyter start as code cells, so the cell format needs to be changed to be recognized and rendered as a Markdown cell. To do this, click on the cell with your cursor to 
 ensure it is activated, and then click on the drop-down box next to the 
 **Restart the kernel, then re-run the whole notebook** button (▶▶) in the 
 Jupyter notebook tab menu and changing it from "**Code**" to "**Markdown**".
@@ -183,7 +181,7 @@ image_read("img/convert-to-markdown-cell.png") %>%
 As with any file you work on, it is critical to save your work often so you 
 don't lose your progress! Jupyter has an autosave feature, where open files are 
 saved periodically. The default for this is every two minutes. You can also 
-manually save a Jupyter notebook through selecting **Save Notebook** from the 
+manually save a Jupyter notebook by selecting **Save Notebook** from the 
 File menu, by clicking the dick icon on the tab menu of the Jupyter notebook,
 or by using a keyboard shortcut (`Control + S` for Windows, or `Command + S` for
 Mac OS). 
@@ -194,9 +192,7 @@ Mac OS).
 
 As you might know (or at least imagine) by now, Jupyter notebooks are great for
 interactively editing, writing and running R code - this is what they were 
-designed for. As a consequence, one of the features of Jupyter notebooks is that 
-they are flexible in regards to code cell execution order. This means that code 
-cells can be run in any arbitrary order using the **Run** (▶) button. This 
+designed for. Consequently, Jupyter notebooks are flexible in regards to code cell execution order. This flexibility means that code cells can be run in any arbitrary order using the **Run** (▶) button. This 
 flexibility has a downside, in that it can lead to the development of Jupyter 
 notebooks whose code cannot be executed in a linear order, from top to bottom of
 the notebook. This is problematic because this is the conventional way that code 
