minor changes to the text

--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -192,14 +192,7 @@ Mac OS).
 
 As you might know (or at least imagine) by now, Jupyter notebooks are great for
 interactively editing, writing and running R code - this is what they were 
-designed for. Consequently, Jupyter notebooks are flexible in regards to code cell execution order. This flexibility means that code cells can be run in any arbitrary order using the **Run** (▶) button. This 
-flexibility has a downside, in that it can lead to the development of Jupyter 
-notebooks whose code cannot be executed in a linear order, from top to bottom of
-the notebook. This is problematic because this is the conventional way that code 
-documents are run and used, and the expectation that others will 
-have for your notebook when they run it. Finally, if the code is to be used in 
-some automated process, it will be required to run in a linear order, from top 
-to bottom of the notebook, for this to work.
+designed for. Consequently, Jupyter notebooks are flexible in regards to code cell execution order. This flexibility means that code cells can be run in any arbitrary order using the **Run** (▶) button. This flexibility has a downside since it can lead to Jupyter notebooks whose code cannot be executed in a linear order (from top to bottom of the notebook). A non-linear notebook is problematic because a linear order is the conventional way code documents are run, and others will have this expectation when running your notebook. Finally, if the code is used in some automated process, it will need to run in a linear order, from top to bottom of the notebook.
 
 Even with the best intentions of writing a Jupyter notebook whose code can be 
 executed in a linear order, the flexibility of the Jupyter notebook can 
@@ -236,12 +229,9 @@ image_read("img/out-of-order-3.png") %>%
 These events may not negatively affect the user of that current R session, but 
 they will negatively affect others that try to run 
 that notebook, including the user that created that notebook in a future R 
-session. Regularly, and intentionally choosing to execute the entire notebook in
-a fresh R session via **Restart Kernel and Run All Cells...** from the Jupyter 
-menu or by using the **Restart the kernel, then re-run the whole notebook** 
-button (▶▶) in the Jupyter notebook tab menu will help guard against this, by 
-letting a user know that some aspect of the code does not allow the notebook to 
-be run linearly. Knowing this sooner than later
+session. Regularly, and intentionally executing the entire notebook in
+a fresh R session will help guard against this by 
+letting a user know that some aspect of the code does not allow the notebook to be run linearly. Knowing this sooner than later
 will allow the user to fix the issue quickly, ideally within
 that session. We recommend doing this at least 2-3 times within any work session
 on a Jupyter notebook.
@@ -277,16 +267,7 @@ the analysis.
 
 ## Exploring data files
 
-It is essential to preview data files before you try to read them into R. This 
-is essential so that you can see whether or not there are column names, what the 
-delimiters are, and if there are lines you need to skip. In Jupyter, you preview 
-data files that are stored as plain text files (e.g., comma- and tab-separated 
-files) in their plain text format by right-clicking on the file's name in the 
-Jupyter file explorer and selecting **Open with** and then selecting **Editor**.
-If you do not specify to open the data file with an editor, then Jupyter will 
-render a nice table for you and you will not be able to see the column
-delimiters, and therefore you will not know which function to use, nor
-which arguments to use and values to specify for them.
+It is essential to preview data files before you try to read them into R to see whether or not there are column names, what the delimiters are, and if there are lines you need to skip. In Jupyter, you preview data files stored as plain text files (e.g., comma- and tab-separated files) in their plain text format by right-clicking on the file's name in the Jupyter file explorer and selecting **Open with** and then selecting **Editor**. Suppose you do not specify to open the data file with an editor. In that case, Jupyter will render a nice table for you, and you will not be able to see the column delimiters, and therefore you will not know which function to use, nor which arguments to use and values to specify for them.
 
 ```{r open-data-w-editor-01, echo = FALSE, fig.cap = "Opening data files with an editor in Jupyter.", fig.retina = 2, out.width="100%"}
 image_read("img/open_data_w_editor_01.png") %>% 
@@ -300,59 +281,26 @@ image_read("img/open_data_w_editor_02.png") %>%
 
 ## Exporting to a different file format 
 
-In Jupyter, viewing, editing and running R code is done in the Jupyter notebook 
-(file extension `.ipynb`) file format. This file format is not easy to open and
-view outside of Jupyter. Thus, to share your analysis with people who do not 
-commonly use Jupyter, it is recommended that you export your executed analysis 
-as a more common file type, such as an `.html` file, or a `.pdf`. We recommend 
-exporting the Jupyter notebook after executing the analysis so that you can also 
-share the outputs of your code.
+In Jupyter, viewing, editing and running R code is done in the Jupyter notebook (file extension `.ipynb`) file format. This file format is not easy to open and view outside of Jupyter. Thus, to share your analysis with people who do not commonly use Jupyter, it is recommended that you export your executed analysis as a more common file type, such as an `.html` file, or a `.pdf`. We recommend exporting the Jupyter notebook after executing the analysis so that you can also share the outputs of your code.
 
-The `.html` file format will result in a shareable file that anyone can open 
-using a web browser (*e.g.,* Firefox, Safari, Chrome, Edge, *etc.*). It will 
-result in a document that visually looks very similar to the what the Jupyter 
-notebook looked like inside Jupyter. One point of caution here, is that if there
-are images in your Jupyter notebook, you will need to share the image files 
-along with the `.html` file to be able to see them.
+The `.html` file format will result in a shareable file that anyone can open using a web browser (*e.g.,* Firefox, Safari, Chrome, Edge, *etc.*). It will result in a document that is visually similar to what the Jupyter notebook looked like inside Jupyter. One point of caution here is that if there are images in your Jupyter notebook, you will need to share the image files and the `.html` file to see them.
 
-The `.pdf` file format will result in a shareable file that anyone can open 
-using many programs, including Adobe Acrobat, Preview, web browsers and many 
-more. The benefit of exporting to PDF is that it is a standalone 
-document, even if the Jupyter notebook included references to image files. The 
-conventional route for exporting Jupyter notebooks to `.pdf` files 
-depends on a powerful tool called LaTeX, and the default settings will result in
-a document that visually looks quite different to the what the Jupyter 
-notebook looked like inside Jupyter in regards to font and page margins. This
-formatting can be customized, however, this requires some learning of the LaTeX
-markup language. 
+The `.pdf` file format will result in a shareable file that anyone can open using many programs, including Adobe Acrobat, Preview, web browsers and many more. The benefit of exporting to PDF is that it is a standalone document, even if the Jupyter notebook included references to image files. The conventional route for exporting Jupyter notebooks to `.pdf` files depends on a powerful tool called LaTeX. The default settings will result in a document that visually looks quite different from what the Jupyter notebook looked like inside Jupyter regarding font and page margins. The formatting can be customized, however, this requires some learning of the LaTeX markup language. 
 
 ## Creating a new Jupyter notebook
 
-At some point, you will want to create a new, fresh Jupyter notebook for your
-own project instead of viewing, running or editing a notebook that was started 
-by someone else. To do this, navigate to the **Launcher** tab, and click on the 
-R icon under the **Notebook** heading. If no **Launcher** tab is visible, you 
-can get a new one via clicking the **+** button at the top of the Jupyter file 
-explorer. 
+At some point, you will want to create a new, fresh Jupyter notebook for your own project instead of viewing, running or editing a notebook that was started by someone else. To do this, navigate to the **Launcher** tab, and click on the R icon under the **Notebook** heading. If no **Launcher** tab is visible, you can get a new one via clicking the **+** button at the top of the Jupyter file explorer. 
 
 ```{r launcher, echo = FALSE, fig.cap = "Clicking on the R icon under the Notebook heading will create a new Jupyter notebook with an R kernel.", fig.retina = 2, out.width="100%"}
 image_read("img/launcher-annotated.png") %>% 
   image_crop("3632x2000")
 ```
 
-Once you have created a new Jupyter notebook, be sure to give it a descriptive 
-name, as the default file name is `Untitled.ipynb`. You can rename files by 
-right-clicking on the file name of the Jupyter notebook you just created and 
-click **Rename**. This will make the file name editable. Use your keyboard to 
-change the name. Pressing `Enter` or clicking anywhere else in the Jupyter 
-interface will save the changed file name.
+
+Once you have created a new Jupyter notebook, be sure to give it a descriptive name, as the default file name is `Untitle.ipynb`. You can rename files by right-clicking on the file name of the Jupyter notebook you just created and click **Rename**. This will make the file name editable. Use your keyboard to change the name. Pressing `Enter` or clicking anywhere else in the Jupyter the interface will save the changed file name.
 
 We recommend not using white space or non-standard characters in file names. 
-Doing so, will not prevent you from using that file in Jupyter. However, these
-sorts of things do start to become troublesome as you start to do more advanced
-data science projects that involve repetition and automation. What we do 
-recommend for file names is using lower case characters, and separating words 
-by `-` or `_`.
+Doing so will not prevent you from using that file in Jupyter. However, these sorts of things become troublesome as you start to do more advanced data science projects that involve repetition and automation. We recommend naming files using lower case characters and separating words by a dash (`-`) or an underscore (`_`).
 
 ## Additional resources
 - The [JupyterLab Documentation](https://jupyterlab.readthedocs.io/en/latest/)
