--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -20,7 +20,7 @@ quickly. In a later chapter, we will also show you how to install and configure 
 By the end of the chapter, students will be able to:
 
 - use Jupyter to run, edit and write R code
-- explore plain text data files in Jupyter
+- open and view plain text data files in Jupyter
 - create new Jupyter notebooks
 - export Jupyter notebooks to other standard file types (e.g., `.html`, `.pdf`) for sharing with non-data science audiences
 
