--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -22,7 +22,7 @@ By the end of the chapter, students will be able to:
 - use Jupyter to run, edit and write R code
 - open and view plain text data files in Jupyter
 - create new Jupyter notebooks
-- export Jupyter notebooks to other standard file types (e.g., `.html`, `.pdf`) for sharing with non-data science audiences
+- export Jupyter notebooks to other standard file types (e.g., `.html`, `.pdf`)
 
 ## Jupyter
 
