Fixed so that figure is directly referenced.

--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -30,7 +30,7 @@ Jupyter is a web-based interactive development environment for creating, editing
 
 The name Jupyter came from combining the names of the three programming languages that it was initially targeted for (Julia, Python, and R), and now many other languages can be used with Jupyter notebooks.
 
-A Jupyter notebook looks like this:
+An example of what a Jupyter notebook looks like is shown in \@ref(fig:img-jupyter).
 
 ```{r img-jupyter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A screenshot of a Jupyter Notebook.", fig.retina = 2}
 knitr::include_graphics("img/jupyter.png")
