Adding details of the figure captions in the main text.

--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -51,10 +51,15 @@ chapter \@ref(move-to-your-own-machine).
 ## Code cells
 
 The sections of a Jupyter notebook that contain code in the R programming 
-language are referred to as code cells. Running a code cell will execute all of 
+language are referred to as code cells. A code cell that has not yet been executed 
+has no number inside the square brackets to the left of the cell 
+(Figure \@ref(fig:code-cell-not-run)). Running a code cell will execute all of 
 the code it contains, and the output (if any exists) will be displayed directly
 underneath the code that generated it. Outputs may include printed text or 
-numbers, data frames and data visualizations.
+numbers, data frames and data visualizations. Cells that have been executed 
+also have a number inside the square brackets to the left of the cell. 
+This number indicates the order in which the cells were run 
+(Figure \@ref(fig:code-cell-run)).
 
 ```{r code-cell-not-run, echo = FALSE, fig.cap = "A code cell in Jupyter that has not yet been executed. Note the absence of a number inside the square brackets to the left of the cell.", fig.retina = 2, out.width="100%"}
 image_read("img/code-cell-not-run.png") %>% 
