Removed details from figure caption that have been moved to the text.

--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -61,7 +61,7 @@ also have a number inside the square brackets to the left of the cell.
 This number indicates the order in which the cells were run 
 (Figure \@ref(fig:code-cell-run)).
 
-```{r code-cell-not-run, echo = FALSE, fig.cap = "A code cell in Jupyter that has not yet been executed. Note the absence of a number inside the square brackets to the left of the cell.", fig.retina = 2, out.width="100%"}
+```{r code-cell-not-run, echo = FALSE, fig.cap = "A code cell in Jupyter that has not yet been executed.", fig.retina = 2, out.width="100%"}
 image_read("img/code-cell-not-run.png") %>% 
   image_crop("3632x1000")
 ```
