Removed details from figure caption that have been moved to the text.

--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -66,7 +66,7 @@ image_read("img/code-cell-not-run.png") %>%
   image_crop("3632x1000")
 ```
 
-```{r code-cell-run, echo = FALSE, fig.cap = "A code cell in Jupyter that has been executed. Note the code output beneath the cell (preview of a data frame) and the presence of a number inside the square brackets to the left of the cell. This number indicates the order in which the cells were run.", fig.retina = 2, out.width="100%"}
+```{r code-cell-run, echo = FALSE, fig.cap = "A code cell in Jupyter that has been executed.", fig.retina = 2, out.width="100%"}
 image_read("img/code-cell-run.png") %>% 
   image_crop("3632x2000")
 ```
