reworded as suggested by @leem44

--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -138,17 +138,20 @@ image_read("img/create-new-code-cell.png") %>%
 
 ## Markdown cells
 
-Rich formatted text cells inside a Jupyter notebook are called Markdown cells.
-They get this name because the rich text formatting is specified using a simple
-markup language called Markdown. You do not need to learn Markdown to write text
-in the Markdown cells in Jupyter, plain text will work just fine. However, you 
-might want to eventually learn a bit about the Markdown markup language because 
-Markdown formatting allows you to do common things like **bold** and *italicize* 
-text, create subject headers, format bullet and numbered lists, and more. 
-Teaching the markdown formatting language is beyond the scope of this book. 
-However, If you are keen to learn more, a good place to
-start is this [cheatsheet](https://commonmark.org/help/) and this 
-[tutorial](https://commonmark.org/help/tutorial/).
+Text cells inside a Jupyter notebook are called Markdown cells. Markdown cells 
+are rich formatted text cells, which means you can **bold** and *italicize* 
+text, create subject headers, format bullet and numbered lists. These cells are 
+given the name "Markdown" because they use the Markdown markup language to 
+specify the rich text formatting. A markup language is a human readable computer 
+language for specifying how plain text should be richly formatted by the program
+that renders it.
+
+You do not need to learn Markdown to write text in the Markdown cells in 
+Jupyter, plain text will work just fine. However, you might want to learn a bit 
+about the Markdown markup language eventually. Teaching the markdown formatting 
+language is beyond the scope of this book. However, If you are keen to learn 
+more, a good place to start is this [cheatsheet](https://commonmark.org/help/) 
+and this [tutorial](https://commonmark.org/help/tutorial/).
 
 ### Editing Markdown cells
 
