Reworked the wording of the best practices for executing code cells section as per @leem44's request.

--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -150,8 +150,10 @@ You do not need to learn Markdown to write text in the Markdown cells in
 Jupyter, plain text will work just fine. However, you might want to learn a bit 
 about the Markdown markup language eventually. Teaching the markdown formatting 
 language is beyond the scope of this book. However, If you are keen to learn 
-more, a good place to start is this [cheatsheet](https://commonmark.org/help/) 
-and this [tutorial](https://commonmark.org/help/tutorial/).
+more, a good place to start is this cheatsheet by Commonmark: 
+[https://commonmark.org/help/](https://commonmark.org/help/), 
+as well as their tutorial: 
+[https://commonmark.org/help/tutorial/](https://commonmark.org/help/tutorial/).
 
 ### Editing Markdown cells
 
@@ -200,24 +202,38 @@ Mac OS).
 
 As you might know (or at least imagine) by now, Jupyter notebooks are great for
 interactively editing, writing and running R code - this is what they were 
-designed for. Consequently, Jupyter notebooks are flexible in regards to code cell execution order. This flexibility means that code cells can be run in any arbitrary order using the **Run** (▶) button. This flexibility has a downside since it can lead to Jupyter notebooks whose code cannot be executed in a linear order (from top to bottom of the notebook). A non-linear notebook is problematic because a linear order is the conventional way code documents are run, and others will have this expectation when running your notebook. Finally, if the code is used in some automated process, it will need to run in a linear order, from top to bottom of the notebook.
+designed for. Consequently, Jupyter notebooks are flexible in regards to code 
+cell execution order. This flexibility means that code cells can be run in any 
+arbitrary order using the **Run** (▶) button. This flexibility has a downside 
+since it can lead to Jupyter notebooks whose code cannot be executed in a linear 
+order (from top to bottom of the notebook). A non-linear notebook is problematic 
+because a linear order is the conventional way code documents are run, and 
+others will have this expectation when running your notebook. Finally, if the 
+code is used in some automated process, it will need to run in a linear order, 
+from top to bottom of the notebook.
 
-Even with the best intentions of writing a Jupyter notebook whose code can be 
-executed in a linear order, the flexibility of the Jupyter notebook can 
-sometimes allow us to misstep and fail to rise to our intentions. The is most 
-often due to relying solely on using the ▶ button to execute cells. It is 
-possible to create a non-linear Jupyter notebook
-because named R objects (*e.g.,* a data frame named `my_data`) are created 
-when a cell is run, they can be referenced in another distinct code cell, and 
-they continue to exist for the entire session the notebook is open. They will 
-only cease to exist if they are deliberately deleted
-with R code, or when the Jupyter notebook R session (*i.e.*, kernel) is stopped 
-or restarted. This means that objects that were created in a cell, can be 
-referenced in a cell above without error, as long as the user runs the cells in
-that particular, non-conventional order. Additionally, a user can create objects
-through running a cell, which later gets deleted. Meaning that that object only
-existed for that one particular R session and would not exist again if the 
-notebook session was restarted and the notebook run again.
+Even with the best intentions, the flexibility of a Jupyter notebook can 
+sometimes cause us to misstep and write non-linear code. This misstep is most 
+often due to relying solely on using the ▶ button to execute cells. For example, 
+suppose you write some R code that creates an R object, say a variable named 
+`y`. When you execute that cell and create `y`, it will continue 
+to exist until it is deliberately deleted with R code, or when the Jupyter 
+notebook R session (*i.e.*, kernel) is stopped or restarted. It can also be 
+referenced in another distinct code cell. Together, this means that you could then write 
+a code cell further above in the notebook that references `y` and execute 
+it without error in the current session. This could also be done successfully in 
+future sessions if, and only if, you run the cells in the same non-conventional 
+order. However, it is difficult to remember this non-conventional order, and it 
+is not the order that others would expect your code to be executed in. An 
+example of this scenario is shown in figures 
+\@ref(fig:out-of-order-1) - \@ref(fig:out-of-order-3).
+
+Another thing that the flexibility of a Jupyter notebooks allows you to do is create 
+objects through running a cell, which later gets deleted. In such a scenario, that 
+object only exists for that one particular R session and would not exist again 
+if the notebook session was restarted and the notebook run again. If that 
+object was referenced in another cell in that notebook, an error would likely
+occur when the Jupyter notebook was run again in a new session.
 
 ```{r out-of-order-1, echo = FALSE, fig.cap = "Code that was written out of order, but not yet executed.", fig.retina = 2, out.width="100%"}
 image_read("img/out-of-order-1.png") %>% 
@@ -234,15 +250,23 @@ image_read("img/out-of-order-3.png") %>%
   image_crop("3632x800")
 ```
 
-These events may not negatively affect the user of that current R session, but 
-they will negatively affect others that try to run 
-that notebook, including the user that created that notebook in a future R 
-session. Regularly, and intentionally executing the entire notebook in
-a fresh R session will help guard against this by 
-letting a user know that some aspect of the code does not allow the notebook to be run linearly. Knowing this sooner than later
-will allow the user to fix the issue quickly, ideally within
-that session. We recommend doing this at least 2-3 times within any work session
-on a Jupyter notebook.
+These events may not negatively affect the current R session when 
+the code was being written, but as you might now see, they will likely lead to 
+errors when that notebook is run in a future session. Regularly, and 
+intentionally executing the entire notebook in a fresh R session will help guard 
+against this by letting a user know that some aspect of the code does not allow 
+the notebook to be run linearly. Knowing this sooner than later will allow the 
+user to fix the issue quickly and easily, ideally within that session. We 
+recommend doing this at least 2-3 times within any work session on a Jupyter 
+notebook.
+
+Note that a key thing about our best practice recommendation here is not just
+running all the cells, but also doing this in a fresh R session. To do this in 
+Jupyter, we recommend using either the **Kernel** >> 
+**Restart Kernel and Run All Cells...** command from the Jupyter menu or the ▶▶ 
+button in the Jupyter notebook tab menu. The **Run** >> **Run All Cells** 
+command from the Jupyter menu will run all the cells, but it will not do this 
+a fresh R session, and so it is not sufficient to guard against these errors.
 
 ### Best practices for including R packages in notebooks
 
