added a Summary of best practices for running a notebook section as suggested by @leem44

--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -297,6 +297,18 @@ external R packages were used in the data analysis, and hence, what R packages
 they would have to ensure are installed on their computer to successfully run 
 the analysis.
 
+### Summary of best practices for running a notebook
+
+1. Write code so that it is expected to be executed in a linear order.
+
+2. As you write code in a Jupyter notebook, run the notebook in a linear order 
+and in it's entirety often (2-3 times every work session) via the **Kernel** >> 
+**Restart Kernel and Run All Cells...** command from the Jupyter menu or the ▶▶ 
+button in the Jupyter notebook tab menu.
+
+3. Write the code that loads external R packages near the top of the Jupyter 
+notebook.
+
 ## Exploring data files
 
 It is essential to preview data files before you try to read them into R to see whether or not there are column names, what the delimiters are, and if there are lines you need to skip. In Jupyter, you preview data files stored as plain text files (e.g., comma- and tab-separated files) in their plain text format by right-clicking on the file's name in the Jupyter file explorer and selecting **Open with** and then selecting **Editor**. Suppose you do not specify to open the data file with an editor. In that case, Jupyter will render a nice table for you, and you will not be able to see the column delimiters, and therefore you will not know which function to use, nor which arguments to use and values to specify for them.
